--- a/day03/style.css
+++ b/day03/style.css
@@ -1,16 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  font-family: "Lato", sans-serif;
+  background-color: #333;
+  color: #222;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+}
+
+.container {
+  background-color: #fafafa;
 }
