--- a/day06/style.css
+++ b/day06/style.css
@@ -10,7 +10,38 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  background-color: #efedd6;
+}
+
+h1 {
+  margin: 10px;
+}
+
+.box {
+  background-color: steelblue;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
+  transform: translateX(1100%);
+  transition: transform 0.4s ease;
+}
+
+.box:nth-of-type(even) {
+  transform: translateX(-1100%);
+}
+
+.box h2 {
+  font-size: 45px;
+}
+
+.box.show {
+  transform: translateX(0);
 }
