--- a/day07/style.css
+++ b/day07/style.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+:root {
+  --left-bg-color: rgba(38, 158, 38, 0.6);
+  --right-bg-color: rgba(255, 140, 0, 0.6);
+  --left-btn-hover-color: rgba(38, 158, 38, 1);
+  --right-btn-hover-color: rgba(255, 140, 0, 1);
+}
+
 * {
   box-sizing: border-box;
 }
@@ -9,6 +16,44 @@ body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
+}
+
+h1 {
+  font-size: 4rem;
+  color: #fff;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
+  white-space: no-wrap;
+}
+
+.btn {
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translateX(-50%);
+  text-decoration: none;
+  color: #fff;
+  border: #fff solid 0.2rem;
+  font-size: 1rem;
+  width: 15rem;
+  padding: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.split.left .btn:hover {
+  background-color: var(--left-btn-hover-color);
+  border-color: var(--left-btn-hover-color);
+}
+
+.split.right .btn:hover {
+  background-color: var(--right-btn-hover-color);
+  border-color: var(--right-btn-hover-color);
 }
 
 .container {
@@ -32,9 +77,25 @@ body {
   background-size: cover;
 }
 
+.split.left::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--left-bg-color);
+}
+
 .split.right {
   right: 0;
   background: url("./beach.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.split.right::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--right-bg-color);
 }
