--- a/day07/style.css
+++ b/day07/style.css
@@ -5,6 +5,9 @@
   --right-bg-color: rgba(255, 140, 0, 0.6);
   --left-btn-hover-color: rgba(38, 158, 38, 1);
   --right-btn-hover-color: rgba(255, 140, 0, 1);
+  --hover-width: 75%;
+  --no-hover-width: 25%;
+  --speed: 1000ms;
 }
 
 * {
@@ -25,7 +28,7 @@ h1 {
   left: 50%;
   top: 20%;
   transform: translateX(-50%);
-  white-space: no-wrap;
+  white-space: nowrap;
 }
 
 .btn {
@@ -98,4 +101,27 @@ h1 {
   width: 100%;
   height: 100%;
   background-color: var(--right-bg-color);
+}
+
+.split.right,
+.split.left,
+.split.right::before,
+.split.left::before {
+  transition: all var(--speed) ease-in-out;
+}
+
+.hover-left .left {
+  width: var(--hover-width);
+}
+
+.hover-left .right {
+  width: var(--no-hover-width);
+}
+
+.hover-right .right {
+  width: var(--hover-width);
+}
+
+.hover-right .left {
+  width: var(--no-hover-width);
 }
