Update UI, update readme, add boilerplate for day 14

--- a/day13/style.css
+++ b/day13/style.css
@@ -37,6 +37,13 @@ textarea {
   font-size: 16px;
 }
 
+#tags {
+  max-width: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .tag {
   background-color: #f0932b;
   color: #fff;
