--- a/day17/style.css
+++ b/day17/style.css
@@ -18,8 +18,9 @@ body {
 header {
   padding: 1rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   background-color: var(--secondary-color);
+  height: 80px;
 }
 
 .search {
