--- a/day17/style.css
+++ b/day17/style.css
@@ -20,9 +20,16 @@ header {
   display: flex;
   justify-content: space-between;
   background-color: var(--secondary-color);
-  height: 80px;
 }
-
+.powered {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-height: 180px;
+  width: 100%;
+  max-width: 300px;
+}
 .search {
   background-color: transparent;
   border: 2px solid var(--primary-color);
