--- a/day19/style.css
+++ b/day19/style.css
@@ -124,12 +124,12 @@ body {
   background-color: var(--primary-color);
   color: var(--secondary-color);
   border-radius: 50%;
-  height: 24px;
-  width: 24px;
-  display: inline-flex;
+  height: 32px;
+  width: 32px;
+  display: inline-block;
   align-items: center;
   justify-content: center;
   line-height: 24px;
   transition: 0.5s ease-in;
-  font-size: 22px;
+  padding: 4px;
 }
