--- a/day21/style.css
+++ b/day21/style.css
@@ -3,11 +3,31 @@
 }
 
 body {
+  background-color: steelblue;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   margin: 0;
   overflow: hidden;
+}
+
+.empty {
+  height: 150px;
+  width: 150px;
+  margin: 10px;
+  border: solid 3px black;
+  background: white;
+}
+
+.fill {
+  background-image: url("./roses.jpg");
+  height: 145px;
+  width: 145px;
+  cursor: pointer;
+}
+@media (max-width: 800px) {
+  body {
+    flex-direction: column;
+  }
 }
