--- a/day21/style.css
+++ b/day21/style.css
@@ -26,6 +26,17 @@ body {
   width: 145px;
   cursor: pointer;
 }
+
+.hold {
+  border: solid 5px #ccc;
+}
+
+.hovered {
+  background-color: #333;
+  border-color: white;
+  border-style: dashed;
+}
+
 @media (max-width: 800px) {
   body {
     flex-direction: column;
