--- a/day25/style.css
+++ b/day25/style.css
@@ -19,6 +19,59 @@ body {
 
 /* Nav */
 
+.nav {
+  position: fixed;
+  background-color: #140b00;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+}
+
+.nav ul {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav a {
+  color: #fff;
+  text-decoration: none;
+  padding: 7px 15px;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav.active {
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(39, 22, 0, 0.7);
+}
+
+.nav.active a {
+  color: #140b00;
+}
+
+.nav.active .container {
+  padding: 10px 0;
+}
+
+.nav a.current,
+.nav a:hover {
+  color: #ff8c00;
+  font-weight: bold;
+}
+
+.nav.active a.current,
+.nav.active a:hover {
+  color: #d87600;
+}
 /* Page */
 
 .hero {
