--- a/day32/style.css
+++ b/day32/style.css
@@ -14,3 +14,41 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
+.toggle-container {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+  width: 200px;
+}
+
+.toggle {
+  visibility: hidden;
+}
+
+.label {
+  width: 80px;
+  height: 40px;
+  background-color: #d0d0d0;
+  border-radius: 50px;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 15px 0;
+  position: relative;
+}
+
+.toggle:checked + .label {
+  background-color: #8e44ab;
+}
+
+.ball {
+  background: #fff;
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  align-items: center;
+  justify-content: center;
+}
